--- a/package.json
+++ b/package.json
@@ -30,10 +30,9 @@
     "gulp-babel": "^6.1.2",
     "gulp-flatten": "^0.2.0",
     "gulp-uglify": "^1.5.3",
+    "jasmine-core": "^2.4.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
-  "dependencies": {
-    "jass-js": "^1.1.4"
-  }
+  "dependencies": {}
 }
