--- a/package.json
+++ b/package.json
@@ -24,15 +24,9 @@
   "homepage": "https://github.com/sebjwallace/schema#readme",
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
-    "babelify": "^6.0.3",
-    "browserify": "^13.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-flatten": "^0.2.0",
-    "gulp-uglify": "^1.5.3",
-    "jasmine-core": "^2.4.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "gulp-concat": "^2.6.0"
   },
   "dependencies": {}
 }
