--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "schema.engine",
-  "version": "1.0.3",
-  "description": "schema oriented DOM rendering engine",
+  "name": "sebjwallace_website",
+  "version": "1.0.0",
+  "description": "portfolio website",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sebjwallace/schema.git"
   },
-  "keywords": [
-    "dom",
-    "render",
-    "view",
-    "object"
-  ],
+  "keywords": [],
   "author": "Sebastian Wallace",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sebjwallace/schema/issues"
   },
   "homepage": "https://github.com/sebjwallace/schema#readme",
-  "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.0"
+  "dependencies": {
+    "virtual-dom": "^2.1.1"
   },
-  "dependencies": {}
+  "devDependencies": {
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
