--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sebjwallace_website",
   "version": "1.0.0",
-  "description": "portfolio website",
+  "description": "modern web framework",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
@@ -26,8 +26,12 @@
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babelify": "^6.1.2",
+    "browserify": "^13.0.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "vinyl-source-stream": "^1.1.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
